Upload build artifacts

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,3 +23,8 @@ jobs:
         distribution: 'temurin'
     - name: Build with Ant
       run: ant -noinput -buildfile build/build.xml
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+          name: Package
+          path: releases
